--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,4 +21,5 @@
   </ul>
 </div>
 
+<div class="page__footer-copyright"><i>If you find a mistake or issue in any article or blog post, please create an issue or pull request on <a href="https://github.com/fsilveir/fsilveir.github.io/"><b>Github</b></a> (must be signed in to your GitHub account).</i></div><br>
 <div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
